apps/hermes-t/ingressroute-hermes-t.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes-t
  namespace: hermes-t
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hermes-t.xrs444.net`) && PathPrefix(`/v1`)
      kind: Rule
      services:
        - name: hermes-t
          port: 8642
    - match: Host(`hermes-t.xrs444.net`)
      kind: Rule
      services:
        - name: hermes-t
          port: 9119
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
